# Arcade

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  arcade  cmake_install.cmake  map.txt  ncurses.cpp  openglMenu.cpp  sdl2menu.cpp
.github/workflows/: ci_adrien.yml  ci_alexis.yml  ci_arcade.yml  compilation.yml  normez.yml  tests.yml
Core/include/: arcade.hpp  core.hpp  interface.hpp  libWrapper.hpp  various.hpp
Core/include/Core/: Core.hpp  GameLib.hpp  GraphicalLib.hpp  MenuLib.hpp  core.hpp
Core/include/Event/: Event.hpp  event.hpp
Core/include/Exceptions/: BasicExceptions.hpp  CoreExceptions.hpp  DlfcnExceptions.hpp  Exceptions.hpp
Core/include/Wrapper/: InterfaceWrapper.hpp  Wrapper.hpp  dlfcnWrapper.hpp  libWrapper.hpp
Core/include/lib/: LibFileManager.hpp  LibHandler.hpp  SharedLibLoader.hpp
Core/src/: core.cpp  libWrapper.cpp  main.cpp
Core/src/Core/: Core.cpp  CoreActionsHandler.cpp  CoreEvent.cpp  GameLib.cpp  GraphicalLib.cpp  MenuLib.cpp  core.cpp
Core/src/Exceptions/: CoreExceptions.cpp  DlfcnExceptions.cpp
Core/src/Wrapper/: InterfaceWrapper.cpp  dlfcnWrapper.cpp  libWrapper.cpp
Core/src/lib/: LibFileManager.cpp  LibHandler.cpp  SharedLibLoader.cpp
Games/Interface/: AGame.hpp  IGames.hpp
Games/Interface/include/: AGame.hpp  EventHandler.hpp  GameEngine.hpp  (+1 more)
Games/Menu/: CMakeLists.txt  entryPoint.cpp
Games/Menu/include/: AGameMenu.hpp  GameEngine.hpp  menu.hpp
Games/Menu/src/: AGame.cpp  AGameWrapper.cpp  EventHandler.cpp  GameEngine.cpp  entryPoint.cpp  menu.cpp
Games/Nibbler/: CMakeLists.txt  Makefile  cmake_install.cmake
Games/Nibbler/include/: AGameNibbler.hpp  GameEngine.hpp  nibbler.hpp
Games/Nibbler/src/: AGameNibbler.cpp  entryPoint.cpp
Games/PacMan/: CMakeLists.txt  Makefile  cmake_install.cmake
Games/Snake/: CMakeLists.txt
Games/Snake/include/: AGameSnake.hpp  GameEngine.hpp  snake.hpp
Games/Snake/src/: AGameSnake.cpp  Game.cpp  GameSnake.cpp  entryPoint.cpp  snake.cpp
Games/test/: CMakeLists.txt
Games/test/include/: AGame.hpp  AGameTest.hpp  GameEngine.hpp  test.hpp  various.hpp
Games/test/src/: AGame.cpp  AGameTest.cpp  AGameWrapper.cpp  EventHandler.cpp  GameEngine.cpp  entryPoint.cpp  test.cpp
Graphicals/: AGraphical.hpp
Graphicals/Interface/: AGraphical.hpp  IGraphicals.hpp
Graphicals/OpenGL/: CMakeLists.txt
Graphicals/OpenGL/include/: opengl.hpp
Graphicals/OpenGL/src/: AGraphicals.cpp  entryPoint.cpp  opengl.cpp  snakeTest.cpp
Graphicals/SDL2/: CMakeLists.txt  Makefile
Graphicals/SDL2/include/: AGraphicalSDL2.hpp  GraphicalFactorySDL2.hpp  sdl2.hpp
Graphicals/SDL2/src/: AEntity.cpp  AEvent.cpp  AGraphical.cpp  AGraphicalEvent.cpp  AGraphicalSDL2.cpp  AGraphicalWindow.cpp  AGraphicals.cpp  AWindow.cpp  Entity.cpp  Factory.cpp  Window.cpp  entryPoint.cpp  menu.cpp  sdl2.cpp
Graphicals/SFML/: CMakeLists.txt
Graphicals/SFML/include/: AGraphicalSFML.hpp  GraphicalFactorySFML.hpp
Graphicals/SFML/src/: AGraphicalsSFML.cpp  Entity.cpp  Factory.cpp  Window.cpp  entryPoint.cpp
Graphicals/nCurses/: CMakeLists.txt  Makefile
Graphicals/nCurses/include/: AGraphicalNcurses.hpp  GraphicalFactoryNcurses.hpp  nCurses.hpp  ncurses.hpp
Graphicals/nCurses/src/: AEvent.cpp  AGraphicalNcurses.cpp  AGraphicals.cpp  AWindow.cpp  Entity.cpp  Factory.cpp  Window.cpp  entryPoint.cpp  menu.cpp  nCurses.cpp  ncurses.cpp
Interface/: IGames.hpp  IGraphicals.hpp
Interface/Game/: IGame.hpp  IGames.hpp
Interface/Graphical/: IClock.hpp  IEntity.hpp  IEvent.hpp  IGraphicalFactory.hpp  IGraphicals.hpp  IWindow.hpp
Interface/Menu/: IMenu.hpp
Menu/: CMakeLists.txt
Menu/include/: LibFileManager.hpp  Menu.hpp
Menu/src/: LibFileManager.cpp  Menu.cpp  entryPoint.cpp
PierreB/: menu.cpp  snake.cpp  test.cpp
PierreB/nibbler_ncurse/: main.cpp
Tests/src/: mainTEST.cpp
assets/: map.txt
doc/: Doxyfile  readme.md
doc/html/: IClock_8hpp__dep__incl.md5  IClock_8hpp_source.html  IEntity_8hpp.html  IEntity_8hpp__incl.map  IEntity_8hpp__incl.md5  IGame_8hpp.html  IGame_8hpp__incl.map  IGraphicalFactory_8hpp__dep__incl.map  IGraphicalFactory_8hpp__dep__incl.md5  IGraphicalFactory_8hpp_source.html  IMenu_8hpp__incl.map  IMenu_8hpp_source.html  IWindow_8hpp.html  IWindow_8hpp__incl.map  IWindow_8hpp__incl.md5  IWindow_8hpp_source.html  annotated.html  classIClock-members.html  classIClock.html  classIClock__coll__graph.md5  classIEntity.html  classIEntity__coll__graph.map  classIEntity__coll__graph.md5  classIEntity__inherit__graph.map  classIEntity__inherit__graph.md5  classIGame.html  classIGame__coll__graph.map  classIGraphicalFactory-members.html  classIGraphicalFactory.html  classIGraphicalFactory__coll__graph.map  classIGraphicalFactory__coll__graph.md5  classIGrid-members.html  classIGrid.html  classIGrid__coll__graph.map  classIGrid__coll__graph.md5  classIMenu.html  classIMenu__coll__graph.map  classIMenu__coll__graph.md5  classIText-members.html  classIText.html  (+39 more)
html/: IClock_8hpp.html  IClock_8hpp__dep__incl.map  IEntity_8hpp__dep__incl.map  IEntity_8hpp__dep__incl.md5  IEntity_8hpp_source.html  IGame_8hpp__incl.md5  IGame_8hpp_source.html  IGraphicalFactory_8hpp.html  IGraphicalFactory_8hpp__incl.map  IGraphicalFactory_8hpp__incl.md5  IMenu_8hpp.html  IMenu_8hpp__incl.md5  IWindow_8hpp__dep__incl.map  IWindow_8hpp__dep__incl.md5  classIClock__coll__graph.map  classIEntity-members.html  classIGame-members.html  classIGame__coll__graph.md5  classIMenu-members.html  classIText__coll__graph.map  classIWindow__coll__graph.md5  dir_2dfc1fda3b64e518a85d0aae078a3005.html  dir_5ca30dea4d4850f28c57b76355115afe.html  dir_b7263c2df3abed61e1897d5e9e534860_dep.md5  dir_b7d7b7213a00837357040aa03310f18e.html  dir_b7d7b7213a00837357040aa03310f18e_dep.md5  functions_vars.html  inherit_graph_0.md5  inherit_graph_5.md5  menudata.js  pages.html  structIGrid_1_1Cell-members.html
html/search/: all_b.js  all_c.js  all_e.js  enums_0.js  enumvalues_1.js  enumvalues_4.js  enumvalues_9.js  enumvalues_c.js  functions_1.js  functions_4.js  functions_7.js  typedefs_0.js
(+38 files in other folders)
